# rmatrix

./: Cargo.toml  README.md
benches/: nano_and_rand.rs
src/: main.rs  matrix.rs  screen.rs
